--- a/index.html
+++ b/index.html
@@ -1,2 +1,78 @@
 <!DOCTYPE html>
+<html>
+<main>
 
+<style>
+
+.container {
+    width: 1000px;
+}
+
+
+.topright {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+}
+
+img {
+       display: block;
+       margin-left: auto;
+        margin-right: auto;
+        margin-top: 250px;
+}
+
+.searchBar {
+    display: block;
+    margin: 0 auto;
+    width: 500px;
+    border-radius: 25px;
+    border-color: lightgray;
+    border-width: thin;
+    background-color: white;
+    padding: 10px;
+}
+
+
+.searchButtons {
+    text-align: center;
+    border-radius: 12px;
+}
+
+a {
+
+    color:black;
+    text-decoration: none;
+    font-size-adjust: .40;
+}
+
+
+</style>
+
+
+<body>
+
+
+
+<div><a href="defalut" target="blank">About Store</a></div>
+<div class="topright"> <a href="default" target="blank"> Gmail Images</a></div>
+
+
+<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
+<input class="searchBar" type="text">
+
+<br>
+
+<div class="searchButtons">
+<input class = "searchButtons" type="button" value="Google Search"> 
+<input class = "searchButtons" type="button" value="I'm Feeling Lucky">
+</div>
+
+
+
+</body>
+
+
+
+</main>
+</html>
